@@ -21,6 +21,7 @@
   [#16039] Names in Pxy (i.e. PA0) style of ports pins for some devices are
            not defined.
   [#16260] _crc16_update lacks C equivalent
+  [#16441] eeprom.h should use __asm__
 
 * Other changes:
 
