@@ -1,3 +1,8 @@
+2006-04-26 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* include/avr/eeprom.h: Use __asm__ in place of asm.
+	Closes bug #16441: eeprom.h should use __asm__.
+
 2006-04-22 Anatoly Sokolov <aesok@post.ru>
 
 	* configure.ac: Add tests for the ATmega165P/169P support.
